Closed Bug 481596 Opened 15 years ago Closed 15 years ago

text-decoration:-moz-anchor-decoration is not serialized

Categories

(Core :: CSS Parsing and Computation, defect, P4)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: dbaron, Assigned: dbaron)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
This internal text-decoration:-moz-anchor-decoration value is not serialized.  This fixes it and adds a test.  I noticed this while working on bug 481595.
Attachment #365622 - Flags: superreview?(bzbarsky)
Attachment #365622 - Flags: review?(bzbarsky)
Attachment #365622 - Flags: superreview?(bzbarsky)
Attachment #365622 - Flags: superreview+
Attachment #365622 - Flags: review?(bzbarsky)
Attachment #365622 - Flags: review+
http://hg.mozilla.org/mozilla-central/rev/3a9de3a90f02
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Priority: -- → P4
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: