Fix serialization bugs with text-decoration:-moz-anchor-decoration.  (Bug 481596)  r+sr=bzbarsky